--- a/public/index.html
+++ b/public/index.html
@@ -175,7 +175,7 @@
         chatMessages.appendChild(botMessageDiv);
 
         try {
-            const response = await fetch('http://https://free-skamen-gpt.onrender.com//', {
+            const response = await fetch('http://https://free-skamen-gpt.onrender.com:3000/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
